fix dark mode css

--- a/src/renderer/assets/styles/components/combobox.scss
+++ b/src/renderer/assets/styles/components/combobox.scss
@@ -52,7 +52,8 @@
   }
 
   .react_aria_Button {
-    display: inline-block;
+    
+    // display: inline-block;
     background: var(--color-secondary);
     color: var(--highlight-foreground);
     forced-color-adjust: none;
