--- a/src/renderer/assets/styles/components/dropdown.scss
+++ b/src/renderer/assets/styles/components/dropdown.scss
@@ -87,7 +87,7 @@
       }
 
       &:hover {
-        background-color: var(--color-medium-grey);
+        background-color: var(--color-extralight-grey);
       }
     }
 
