--- a/src/renderer/assets/styles/components/readerFooter.scss
+++ b/src/renderer/assets/styles/components/readerFooter.scss
@@ -94,10 +94,10 @@
         svg {
             color: var(--color-blue);
 
-            @media (prefers-color-scheme: dark) {
-                fill: #FEFEFE;
-                color: #FEFEFE;
-            }
+            // @media (prefers-color-scheme: dark) {
+            //     fill: #FEFEFE;
+            //     color: #FEFEFE;
+            // }
         }
 
         &.disabled {
