--- a/src/renderer/assets/styles/components/readerHeader.scss
+++ b/src/renderer/assets/styles/components/readerHeader.scss
@@ -76,10 +76,10 @@
                     fill: var(--color-blue);
                     color: var(--color-blue);
 
-                    @media (prefers-color-scheme: dark) {
-                        fill: #FEFEFE;
-                        color: #FEFEFE;
-                    }
+                    // @media (prefers-color-scheme: dark) {
+                    //     fill: #FEFEFE;
+                    //     color: #FEFEFE;
+                    // }
                 }
             }
 
@@ -114,10 +114,10 @@
     fill: white!important;
     color: white!important;
 
-    @media (prefers-color-scheme: dark) {
-        fill: black!important;
-        color: black!important;
-    }
+    // @media (prefers-color-scheme: dark) {
+    //     fill: black!important;
+    //     color: black!important;
+    // }
 }
 
 .picker_container {
